feat: :sparkles: implement ShowCustomerDataUC
