# internal/infra/delivery/http/customer_handler.go
@@ -1,6 +1,7 @@
 package http
 
 import (
+	"encoding/json"
 	"fmt"
 
 	"github.com/gin-gonic/gin"
@@ -12,16 +13,23 @@ import (
 
 type CunstomerHandler struct {
 	createCustomerUC domain.CreateCustomerUC
+	showcustomerUC   domain.ShowCustomerDataUC
 }
 
-func NewCustomerHandler(r *gin.RouterGroup, uc domain.CreateCustomerUC) {
-
+func NewCustomerHandler(
+	r *gin.RouterGroup,
+	uc domain.CreateCustomerUC,
+	auth gin.HandlerFunc,
+	showCustomeruc domain.ShowCustomerDataUC,
+) {
 	handler := &CunstomerHandler{
 		createCustomerUC: uc,
+		showcustomerUC:   showCustomeruc,
 	}
 
 	customerRoutes := r.Group("/customers")
-	customerRoutes.POST("", handler.CreateCustomer)
+	customerRoutes.GET("/:id", auth, handler.ShowCustomerData)
+	customerRoutes.POST("/", handler.CreateCustomer)
 
 }
 
@@ -63,4 +71,43 @@ func (h *CunstomerHandler) CreateCustomer(c *gin.Context) {
 	c.JSON(201, outputs.CreateCustomerResponse{
 		ID: id,
 	})
+}
+
+// GetCustomerData godoc
+// @Summary Gets given customer data by ID
+// @Tags customers
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} domain.OutgoingCustomer
+// @Failure 400 {object} outputs.ErrorResponse
+// @Failure 401 {object} outputs.ErrorResponse
+// @Failure 500 {object} outputs.ErrorResponse
+// @Router /api/customers [get]
+func (h *CunstomerHandler) ShowCustomerData(c *gin.Context) {
+	id := c.Param("id")
+
+	if id == "" {
+		c.JSON(400, outputs.ErrorResponse{
+			Message: "Invalid input"})
+		return
+	}
+
+	var customer domain.OutgoingCustomer
+
+	str, _ := c.Get("currentCustomer")
+	json.Unmarshal([]byte(str.(string)), &customer)
+
+	res, err := h.showcustomerUC.ShowCustomerData(c, customer.ID, id)
+
+	if err != nil {
+		if e.IsUnauthorizedError(err) {
+			c.JSON(401, outputs.ErrorResponse{
+				Message: err.Error(),
+			})
+			return
+		}
+		c.JSON(500, gin.H{"error": "Failed to get customer"})
+		return
+	}
+	c.JSON(200, res)
 }
